add redirect option after upload with dropzeon

--- a/Resources/views/Form/media_widget.html.twig
+++ b/Resources/views/Form/media_widget.html.twig
@@ -29,9 +29,17 @@
                                                 myDropzone.processQueue();
                                             }
                                     );
-
+                                },
+                    {% if form.parent.vars.redirect|default(false) %}
+                                complete: function(){
+                                    var myDropzone = this;
+                                    if (myDropzone.getRejectedFiles().length==0){
+                                        window.location={{ path(form.parent.vars.redirect) }};
+                                    }
                                 }
+                    {% endif %}
                             };
+
                 $("#{{ form.parent.vars.id }}").closest('form').addClass('dropzone').dropzone(Dropzone.options);
             });
         </script>
